name:           chain-analysis
version:        0.1.0.0
description:    Ethereum blockchain analysis
author:         Daolab
maintainer:     joshannessy@gmail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

-- source-repository head
--   type: git
--   location: https://github.com/daolab/evm-mod

-- library
--   hs-source-dirs:
--       src
--   build-depends:
--       base >=4.7 && <5
--       , attoparsec
--       , base16-bytestring
--       , binary
--       , bytestring
--       , containers
--       , cryptonite
--       , memory
--       , parsec
--       , QuickCheck
--   exposed-modules:
--       OpCode.Exporter,
--       OpCode.Parser,
--       OpCode.StructureParser,
--       OpCode.Type,
--       OpCode.Utils,
--       Check.Stores,
--       Check.JumpTable,
--       Process
--   other-modules:
--       Paths_evm_mod
--   default-language: Haskell2010

executable query
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , cassava
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , time
    , vector
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  default-language: Haskell2010

executable evm-get-refs
  main-is: GetReferences.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , cassava
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , time
    , vector
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  default-language: Haskell2010

-- executable scrape
--   main-is: ScrapeContracts.hs
--   hs-source-dirs: src
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , attoparsec
--     , evm-mod
--     , base16-bytestring
--     , bytestring
--     , containers
--     , data-default
--     , directory
--     , filepath
--     , parsec
--     , process
--     , req
--     , scalpel-core
--     , tagsoup
--     , temporary
--     , text
--     , HUnit
--     , QuickCheck
--     , test-framework
--     , test-framework-hunit
--     , test-framework-quickcheck2
--     , web3
--   default-language: Haskell2010
