name:           evm-mod
version:        0.1.0.0
description:    EVM bytecode parser and modifier
author:         Daolab
maintainer:     joshannessy@gmail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

-- source-repository head
--   type: git
--   location: https://github.com/daolab/evm-mod

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , bytestring
      , attoparsec
      , QuickCheck
  exposed-modules:
      OpCode.Exporter,
      OpCode.Parser,
      OpCode.Type,
      JumpChecker
  other-modules:
      Paths_evm_mod
  default-language: Haskell2010

executable evm-mod-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , evm-mod
    , bytestring
    , attoparsec
  other-modules:
      Paths_evm_mod
  default-language: Haskell2010

test-suite evm-mod-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , evm-mod
    , base16-bytestring
    , bytestring
    , attoparsec
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
  other-modules:
      Paths_evm_mod,
      Models.HandWritten
  default-language: Haskell2010
