name:           evm-mod
version:        0.1.0.0
description:    EVM bytecode parser and modifier
author:         Daolab
maintainer:     joshannessy@gmail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

-- source-repository head
--   type: git
--   location: https://github.com/daolab/evm-mod

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , attoparsec
      , base16-bytestring
      , binary
      , bytestring
      , containers
      , cryptonite
      , memory
      , parsec
      , QuickCheck
  exposed-modules:
      OpCode.Exporter,
      OpCode.Parser,
      OpCode.StructureParser,
      OpCode.Type,
      OpCode.Utils,
      Check.Stores,
      Check.JumpTable,
      Process
  other-modules:
      Paths_evm_mod
  default-language: Haskell2010

executable evm-mod-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , evm-mod
    , bytestring
    , attoparsec
  other-modules:
      Paths_evm_mod
  default-language: Haskell2010

test-suite evm-mod-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  other-modules:
      Paths_evm_mod,
      CompileSolidity,
      Models.HandWritten,
      Tests.HandleOpCodes,
      Tests.Transform,
      Tests.Transform.AdderOnChainProtected,
      Tests.Transform.AdderOnChainUnprotected,
      Tests.Transform.StoreAndGetOnChainProtectedInBounds,
      Tests.Transform.StoreAndGetOnChainProtectedOutOfBounds,
      Tests.Transform.StoreAndGetOnChainUnprotectedInBounds,
      Tests.Analyse,
      Tests.Utils
  default-language: Haskell2010

executable query
  main-is: Query.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , cassava
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , time
    , vector
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  default-language: Haskell2010

executable scrape
  main-is: ScrapeContracts.hs
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , parsec
    , process
    , req
    , scalpel-core
    , tagsoup
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  default-language: Haskell2010
